deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawk-app-ia331s08
  namespace: ia331
  labels:
    app: hawk-app-ia331s08
    owner: ia331s08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hawk-app-ia331s08
  template:
    metadata:
      labels:
        app: hawk-app-ia331s08
        owner: ia331s08
    spec:
      containers:
        - name: hawk-app-ia331s08
          image: ${HAWK_REGISTRY_IMAGE}:${CI_COMMIT_SHORT_SHA}
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
